--- a/CalculadoraCientifica.css
+++ b/CalculadoraCientifica.css
@@ -127,4 +127,9 @@ pero que no se muestra visualmente ya que su significado se deriva por contexto 
         width: 100%;
     }*/
 
+    /*(0,1,1)*/
+    input[type="button"]{
+        padding: 1.7rem;
+    }
+
 }
