--- a/CalculadoraCientifica.css
+++ b/CalculadoraCientifica.css
@@ -123,9 +123,9 @@ pero que no se muestra visualmente ya que su significado se deriva por contexto 
         text-align: center;
     }
     /*(0,1,0)*/
-    /*.teclas{
-        width: 100%;
-    }*/
+    .teclas{
+        overflow: scroll;
+    }
 
     /*(0,1,1)*/
     input[type="button"]{
