--- a/CalculadoraCientifica.css
+++ b/CalculadoraCientifica.css
@@ -124,12 +124,7 @@ pero que no se muestra visualmente ya que su significado se deriva por contexto 
     }
     /*(0,1,0)*/
     .teclas{
-        overflow: scroll;
-    }
-
-    /*(0,1,1)*/
-    input[type="button"]{
-        padding: 1.7rem;
+        width: 100%;
     }
 
 }
