css validation problem

--- a/CalculadoraCientifica.css
+++ b/CalculadoraCientifica.css
@@ -47,7 +47,6 @@ input[type="button"]{
 pero que no se muestra visualmente ya que su significado se deriva por contexto */
 .visuallyhidden {
     border: 0;
-    clip: rect(0 0 0 0);
     height: 1px;
     margin: -1px;
     overflow: hidden;
@@ -120,7 +119,7 @@ pero que no se muestra visualmente ya que su significado se deriva por contexto 
 
     /*(1,0,0)*/
     #pantalla{
-        text-align: center;
+        text-align: center; /*Redefinición en el validador CSS*/
     }
     /*(0,1,0)*/
     .teclas{
