grid-row-start redefinition fixed

--- a/CalculadoraCientifica.css
+++ b/CalculadoraCientifica.css
@@ -29,13 +29,13 @@ main{
 
 /*(1,0,0)*/
 #igual{
-    grid-row: span 2;
-    grid-column: span 2;
+    grid-row-end: span 2;
+    grid-column-end: span 2;
 }
 
 /*(1,0,0)*/
 #delete{
-    grid-column: span 2;
+    grid-column-end: span 2;
 }
 
 /*(0,1,1)*/
